fix one var listed add f1j

--- a/codebook.Rmd
+++ b/codebook.Rmd
@@ -147,7 +147,7 @@ codetable(helpdata$f1f,"HELP Variable `f1f`")
 codetable(helpdata$f1g,"HELP Variable `f1g`")
 codetable(helpdata$f1h,"HELP Variable `f1h`")
 codetable(helpdata$f1i,"HELP Variable `f1i`")
-codetable(helpdata$g1b,"HELP Variable `g1b`")
+codetable(helpdata$flj,"HELP Variable `flj`")
 codetable(helpdata$f1k,"HELP Variable `f1k`")
 codetable(helpdata$f1l,"HELP Variable `f1l`")         
 codetable(helpdata$f1m,"HELP Variable `f1m`")
